# LogsManagement

./: .gitignore  app.py  gitignore  pyproject.toml  readme.md  requirements.txt  script.sql  seed.py  test_main.http
data/: logs_handler.py
errors/: error_handler.py
http_types/: http_request.py  http_response.py
main/routes/: logs_routes.py
main/server/: server.py
main/service/: service_redis.py
models/constants/: tags_enum.py
models/entities/: logs.py
models/repository/: logs_repository.py  redis_repository.py
models/settings/: base.py  connection.py
models/settings/redis/: redis_connection.py
